<?xml version="1.0"?>
<package format="3">
  <name>orbslam2_ros2_mono</name>
  <version>0.0.1</version>
  <description>ORB-SLAM2 monocular ROS2 wrapper (Isaac Sim compatible)</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>Eigen3</depend>
  <depend>opencv</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
